fix: update secondary color variable for better contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 @theme {
   /* Colors */
   --color-primary:    #313638;
-  --color-secondary:  #C84C09;
+  --color-secondary: #8B2E00;
   --color-background: #FFFBDB;
   --color-black:      #000000;
  
